# WaveSculptr_1.0

./: .babelrc  .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
css/: index.css
docs/: 0.js  index.html  index.js
js/: App.js  SculptView.js  index.js
public/: index.html
src/: Cargo.toml  lib.rs
src/backend/: lib.rs
static/: index.html
ts/: AnalView.tsx  App.tsx  SculptView.tsx  index.tsx
